[workspace]
members = [
    "lightning-client",
    "api-server",
    "tools/set-password",
]
resolver = "2"

[workspace.dependencies]
anyhow      = "1"
async-trait = "0.1"
base64      = "0.21"
config      = "0.14"
hex         = "0.4"
reqwest     = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
actix-web   = "4"
dialoguer   = "0.11"
toml_edit   = "0.22"
argon2    = "0.5.3"
