[package]
name = "lightning-client"
version = "0.1.0"
edition = "2021"

# -----------------------------------------------------------------
# Workspace deps (non-optional)
# -----------------------------------------------------------------
[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { workspace = true }
config      = { workspace = true }
hex         = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

# -----------------------------------------------------------------
# OPTIONAL deps – declared **locally**, not in workspace
# -----------------------------------------------------------------
chrono        = { version = "0.4", optional = true }
lnd_grpc_rust = { version = "2.11", optional = true }

# -----------------------------------------------------------------
# Features
# -----------------------------------------------------------------
[features]
default = []
lnd-grpc = ["lnd_grpc_rust"]
cln      = ["chrono"]